# agui-mcp-voice-demo

./: .env.example  .gitignore  CLAUDE.md  FRONTEND_BRIEF.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  test_e2e.py  test_tool_type.py
backend/src/: app.py
backend/src/agents/: factory.py  registry.py  runner.py  state.py
backend/src/agents/chef/: prompts.py
backend/src/agents/shopping/: prompts.py
backend/src/agents/support/: prompts.py
backend/src/agents/travel/: prompts.py
backend/src/agents/trivia/: prompts.py
backend/src/mcp_servers/: base.py  chef_server.py  shopping_server.py  support_server.py  travel_server.py  trivia_server.py
backend/src/voice/: realtime_service.py  stt_service.py  tts_service.py
backend/tests/: test_mcp_servers.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ComponentRegistry.jsx  DemoSelector.jsx  DemoView.jsx  GenUICard.jsx  ToolCallStamp.jsx
frontend/src/components/cards/: ChefCards.jsx  ShoppingCards.jsx  SupportCards.jsx  TravelCards.jsx  TriviaCards.jsx
frontend/src/components/hud/: CanvasHUD.jsx  ToolDrawer.jsx
frontend/src/components/voice/: PlasmaOrb.jsx  VoiceScene.jsx
frontend/src/hooks/: useCustomAgent.js
frontend/src/styles/: global.css
